# smol

./: .gitignore  hello.py  pyproject.toml  rag.ipynb
